--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,4 @@
+@import url("./font.css");
 
 .container {
   background-color: antiquewhite;
@@ -34,3 +35,6 @@
 }
 
 
+.textBox p {
+    font-family: "Montserrat";
+}
