--- a/styles/main.css
+++ b/styles/main.css
@@ -20,10 +20,12 @@
   object-fit: cover;
   width: 30%;
   vertical-align: top;
-  opacity: 0.9;
+  opacity: 0.5;
+  transition: all 0.5s ease-in-out;
 }
 .box img:hover {
   opacity: 1;
+  transform: scale(1.1);
 }
 
 .textBox {
@@ -41,4 +43,29 @@
 
 .textBox p {
     font-family: "Montserrat";
+}
+
+.animationBox {
+  display: inline-block;
+  width: 300px;
+  height: 300px;
+  background-color: blue;
+  animation-name: rotation;
+  animation-duration: 5s;
+  animation-timing-function: linear;
+  animation-iteration-count: 4;
+  animation-direction: alternate;
+}
+
+.animationBox:hover {
+  animation-play-state: paused;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg) translate(0);
+  }
+  to {
+    transform: rotate(360deg) translate(100%);
+  }
 }
